--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.8.2"
+    "react-hook-form": "^6.8.2",
+    "swr": "^0.3.2"
   }
 }
